fixed deprecated calls for Float (with some Doubles sprinkled in) [3191]